--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDri
 spring.datasource.url=jdbc:tc:postgresql:14.6-alpine:///test?user=postgres&password=postgres&currentSchema=test_insertion
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.jdbc.batch_size=${batch_insertion.batch_size}
+#spring.datasource.hikari.maximum-pool-size=100
